# radscheduler

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTORS.txt  LICENSE  README.md  devbox.json  devenv.nix  elm.json  env.sample  fly.toml  local.yml  manage.py  package-lock.json  package.json  pnpm-lock.yaml  process-compose.yaml  production.yml  pyproject.toml  requirements.txt
.devbox_scripts/: init_hook.sh
.devcontainer/: Dockerfile  bashrc.override.sh  devcontainer.json
.envs/.local/: .postgres
.github/: copilot-instructions.md
.github/workflows/: fly.yml
compose/local/django/: start
compose/production/django/: Dockerfile  start
compose/production/traefik/: traefik.yml
config/: asgi.py  settings.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
locale/en_US/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
radscheduler/: conftest.py
radscheduler/core/: admin.py  apps.py  domain_mapper.py  forms.py  ical.py  io.py  logic.py  mapper.py  models.py  roster.py  service.py  utils.py  validators.py  views.py
radscheduler/core/api/: __init__.py  roster_calendar.py
radscheduler/core/components/: shifts_table.py
radscheduler/core/migrations/: 0001_initial.py  0002_alter_leave_type.py  0002_initial.py  0002_status_shift_types_status_weekdays.py  0003_alter_leave_unique_together_and_more.py  0003_alter_status_shift_types_alter_status_weekdays.py  0004_leave_no_abutting_weekend.py  0005_alter_shift_unique_together_shiftinterest.py  0006_alter_shiftinterest_options_and_more.py  0007_alter_shift_unique_together_alter_shift_type_and_more.py  0008_alter_leave_type_alter_shift_type_and_more.py  0009_add_date_indexes.py  0010_leave_core_leave_registr_440c22_idx_and_more.py
radscheduler/core/templatetags/: editor_tags.py
radscheduler/core/tests/: test_api.py  test_forms.py  test_ical.py  test_logic.py  test_mapper.py  test_model.py  test_service.py  test_validators.py  test_views.py
radscheduler/core/views/: __init__.py  calendar.py  editor.py  extra_duties.py  generator.py  leaves.py  roster.py
radscheduler/functional_tests/: test_editor.py  test_main.py
radscheduler/leave_application/: admin.py  apps.py  models.py
radscheduler/leave_application/migrations/: 0001_initial.py
radscheduler/paper_forms/: forms.py  pdf.py  tests.py
radscheduler/roster/: __init__.py  assigner.py  generator.py  models.py  rosters.py  utils.py  validators.py
radscheduler/roster/tests/: test_assigner.py  test_generator.py  test_models.py  test_validators.py
radscheduler/static/css/: editor.scss  roster_table.scss
radscheduler/static/js/: calendar.js  editor.js  project.js  roster_table.js  vendors.js
radscheduler/static/sass/: project.scss
radscheduler/templates/: base.html  calendar.html  navbar.html  roster_table.html  table.html
radscheduler/users/: adapters.py  admin.py  apps.py  models.py  urls.py  views.py
requirements/: base.txt  local.txt  production.txt
webpack/: common.config.js  dev.config.js
(+54 files in other folders)
