[project]
name = "radscheduler"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "django<6.0",
    "django-environ",
    "django-model-utils",
    "django-allauth",
    "django-crispy-forms",
    "crispy-bootstrap5",
    "django-redis",
    "django-webpack-loader",
    "django-admin-rangefilter",
    "django-htmx",
    "django-extensions",
    "django-ninja",
    "dacite",
    "unpoly",
    "pypdf",
    "reportlab",
    "django-ical",
    "python-slugify",
    "Pillow",
    "argon2-cffi",
    "whitenoise",
    "redis",
    "hiredis",
    "holidays",
    "pyyaml",
    "pandas",
]

[project.optional-dependencies]
local = [
    "pip-tools",
    "psycopg[binary]",
    "Werkzeug[watchdog]",
    "ipdb",
    "mypy",
    "pytest",
    "pytest-django",
    "pytest-sugar",
    "freezegun",
    "coverage",
    "sphinx",
    "sphinx-autobuild",
    "flake8",
    "flake8-isort",
    "ruff",
    "djlint",
    "pylint-django",
    "factory-boy",
    "django-stubs[compatible-mypy]",
    "django-debug-toolbar",
    "django-coverage-plugin",
    "django-webtest",
    "django-functest",
    "pre-commit",
]
production = ["gunicorn", "psycopg[c]", "sentry-sdk", "django-anymail[mailgun]"]

# ==== pytest ====
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ds=config.settings.test --reuse-db"
python_files = ["tests.py", "test_*.py"]

# ==== Coverage ====
[tool.coverage.run]
include = ["radscheduler/**"]
omit = ["*/migrations/*", "*/tests/*"]
plugins = ["django_coverage_plugin"]


# ==== black ====
[tool.black]
line-length = 119
target-version = ['py311']


# ==== isort ====
[tool.isort]
profile = "black"
line_length = 119
known_first_party = ["radscheduler", "config"]
skip = ["venv/"]
skip_glob = ["**/migrations/*.py"]


# ==== mypy ====
[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
# Django migrations should not produce any errors:
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings.test"


# ==== PyLint ====
[tool.pylint.MASTER]
load-plugins = ["pylint_django"]
django-settings-module = "config.settings.local"

[tool.pylint.FORMAT]
max-line-length = 119

[tool.pylint."MESSAGES CONTROL"]
disable = ["missing-docstring", "invalid-name"]

[tool.pylint.DESIGN]
max-parents = 13

[tool.pylint.TYPECHECK]
generated-members = [
    "REQUEST",
    "acl_users",
    "aq_parent",
    "[a-zA-Z]+_set{1,2}",
    "save",
    "delete",
]


# ==== djLint ====
[tool.djlint]
blank_line_after_tag = "load,extends"
close_void_tags = true
format_css = true
format_js = true
# TODO: remove T002 when fixed https://github.com/Riverside-Healthcare/djLint/issues/687
ignore = "H006,H030,H031,T002,H021"
include = "H017,H035"
indent = 2
max_line_length = 119
profile = "django"

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2
